--- a/api/composer.json
+++ b/api/composer.json
@@ -33,6 +33,7 @@
     "require-dev": {
         "api-platform/schema-generator": "^2.2",
         "hautelook/alice-bundle": "^2.8",
+        "rector/rector": "^0.11.58",
         "symfony/browser-kit": "^5.1",
         "symfony/css-selector": "^5.1",
         "symfony/debug-bundle": "^5.1",
